Disables printing a version string to the console for GN build.
R=ricow@google.com

Review URL: https://codereview.chromium.org//850053005

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43041 260f80e4-7a28-3924-810f-c04153c831b5

--- a/runtime/BUILD.gn
+++ b/runtime/BUILD.gn
@@ -73,6 +73,7 @@ action("generate_version_cc_file") {
 
   script = "../tools/make_version.py"
   args = [
+    "--quiet",
     "--output", rebase_path(output, root_build_dir),
     "--input", rebase_path("vm/version_in.cc", root_build_dir),
   ]
