Fixes for updated third_party/android_tools.
R=asiva@google.com

Review URL: https://codereview.chromium.org//863173003

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43152 260f80e4-7a28-3924-810f-c04153c831b5

--- a/runtime/vm/BUILD.gn
+++ b/runtime/vm/BUILD.gn
@@ -4,10 +4,15 @@
 
 config("libdart_vm_config") {
   libs = [
-    "pthread",
-    "rt",
     "dl",
   ]
+
+  if (!is_android) {
+    libs += [
+      "pthread",
+      "rt",
+    ]
+  }
 }
 
 
