Add support for ignoring the svn revision when getting the version, use this for gn build
R=zra@google.com
BUG=

Review URL: https://codereview.chromium.org//884523003

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43297 260f80e4-7a28-3924-810f-c04153c831b5

--- a/runtime/BUILD.gn
+++ b/runtime/BUILD.gn
@@ -76,6 +76,7 @@ action("generate_version_cc_file") {
     "--quiet",
     "--output", rebase_path(output, root_build_dir),
     "--input", rebase_path("vm/version_in.cc", root_build_dir),
+    "--ignore_svn_revision",
   ]
 }
 
