Synchronize gen_snapshot sources in bin/BUILD.gn with bin.gypi
BUG=
R=zra@google.com

Review URL: https://codereview.chromium.org//901053002

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43490 260f80e4-7a28-3924-810f-c04153c831b5

--- a/runtime/bin/BUILD.gn
+++ b/runtime/bin/BUILD.gn
@@ -151,9 +151,15 @@ executable("gen_snapshot") {
   sources = [
     "gen_snapshot.cc",
     # Very limited native resolver provided.
+    "builtin_common.cc",
     "builtin_gen_snapshot.cc",
     "builtin.cc",
     "builtin.h",
+    "platform_android.cc",
+    "platform_linux.cc",
+    "platform_macos.cc",
+    "platform_win.cc",
+    "platform.h",
     # Include generated source files.
     "$target_gen_dir/builtin_gen.cc",
     "$target_gen_dir/io_gen.cc",
