Allows gen_snapshot to be built with asan in the Mojo tree.
R=koda@google.com

Review URL: https://codereview.chromium.org//922863003

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43764 260f80e4-7a28-3924-810f-c04153c831b5

--- a/runtime/BUILD.gn
+++ b/runtime/BUILD.gn
@@ -45,6 +45,13 @@ config("dart_config") {
       "-O3",
     ]
   }
+
+  if (is_asan) {
+    ldflags = [
+      "-Wl,-u_sanitizer_options_link_helper",
+      "-fsanitize=address",
+    ]
+  }
 }
 
 
