Rev observatory dependencies
To be committed after DEPS file updates.

R=rmacnak@google.com

Review URL: https://codereview.chromium.org//937603002

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43846 260f80e4-7a28-3924-810f-c04153c831b5

--- a/runtime/observatory/maintainers/pubspec.template
+++ b/runtime/observatory/maintainers/pubspec.template
@@ -1,16 +1,17 @@
 name: observatory
 version: 1.6.0-dev.1
-dependencies:
-  args: any
-  polymer: any
-  unittest: any
 transformers:
 - polymer:
     entry_points:
     - web/index.html
-    - web/index_devtools.html
     inline_stylesheets:
       lib/src/elements/css/shared.css: false
 - $dart2js:
     suppressWarnings: false
     $exclude: web/main.dart
+    commandLineOptions: [--show-package-warnings]
+dependencies:
+  args: any
+  polymer: any
+  unittest: any
+  usage: any
