--- a/runtime/observatory/pubspec.yaml
+++ b/runtime/observatory/pubspec.yaml
@@ -1,9 +1,20 @@
 name: observatory
 version: 1.6.0-dev.1
+transformers:
+- polymer:
+    entry_points:
+    - web/index.html
+    inline_stylesheets:
+      lib/src/elements/css/shared.css: false
+- $dart2js:
+    suppressWarnings: false
+    $exclude: web/main.dart
+    commandLineOptions: [--show-package-warnings]
 dependencies:
   args: any
   polymer: any
   unittest: any
+  usage: any
 dependency_overrides:
   analyzer:
     path: ../../third_party/observatory_pub_packages/analyzer
@@ -13,14 +24,22 @@ dependency_overrides:
     path: ../../third_party/observatory_pub_packages/barback
   browser:
     path: ../../third_party/observatory_pub_packages/browser
+  cli_util:
+    path: ../../third_party/observatory_pub_packages/cli_util
   code_transformers:
     path: ../../third_party/observatory_pub_packages/code_transformers
   collection:
     path: ../../third_party/observatory_pub_packages/collection
   csslib:
     path: ../../third_party/observatory_pub_packages/csslib
+  dart_style:
+    path: ../../third_party/observatory_pub_packages/dart_style
+  glob:
+    path: ../../third_party/observatory_pub_packages/glob
   html5lib:
     path: ../../third_party/observatory_pub_packages/html5lib
+  initialize:
+    path: ../../third_party/observatory_pub_packages/initialize
   logging:
     path: ../../third_party/observatory_pub_packages/logging
   matcher:
@@ -49,21 +68,17 @@ dependency_overrides:
     path: ../../third_party/observatory_pub_packages/template_binding
   unittest:
     path: ../../third_party/observatory_pub_packages/unittest
+  usage:
+    path: ../../third_party/observatory_pub_packages/usage
   utf:
     path: ../../third_party/observatory_pub_packages/utf
   watcher:
     path: ../../third_party/observatory_pub_packages/watcher
   web_components:
     path: ../../third_party/observatory_pub_packages/web_components
+  when:
+    path: ../../third_party/observatory_pub_packages/when
+  which:
+    path: ../../third_party/observatory_pub_packages/which
   yaml:
     path: ../../third_party/observatory_pub_packages/yaml
-transformers:
-- polymer:
-    entry_points:
-    - web/index.html
-    - web/index_devtools.html
-    inline_stylesheets:
-      lib/src/elements/css/shared.css: false
-- $dart2js:
-    suppressWarnings: false
-    $exclude: web/main.dart
