[infra] Fix default path to git directory when running GN
This should fix the tools/get_dot_git_folder.py script when
running the Debian package build from a source tarball.

Change-Id: I703fa34bbb6c73763c385e7d05b130091a131ade
Reviewed-on: https://dart-review.googlesource.com/c/sdk/+/191401
Reviewed-by: Jens Johansen <jensj@google.com>
Reviewed-by: Alexander Thomas <athom@google.com>

--- a/sdk_args.gni
+++ b/sdk_args.gni
@@ -20,7 +20,10 @@ declare_args() {
   # file under the git worktree folder.
   # The script run here should take care of everything automatically though.
   default_git_folder = exec_script("$_dart_root/tools/get_dot_git_folder.py",
-                                   [ rebase_path("$_dart_root/.git") ],
+                                   [
+                                     rebase_path("$_dart_root/.git"),
+                                     "$_dart_root/.git",
+                                   ],
                                    "trim string")
 
   # Whether to enable the SDK hash check that will prevent loading a kernel
