--- a/pkg/dds/pubspec.yaml
+++ b/pkg/dds/pubspec.yaml
@@ -3,27 +3,27 @@ description: >-
   A library used to spawn the Dart Developer Service, used to communicate with
   a Dart VM Service instance.
 
-version: 1.7.5
+version: 1.7.6
 
 homepage: https://github.com/dart-lang/sdk/tree/master/pkg/dds
 
 environment:
-  sdk: '>=2.6.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   async: ^2.4.1
   json_rpc_2: ^2.2.0
   meta: ^1.1.8
   pedantic: ^1.7.0
-  shelf: ^0.7.5
-  shelf_proxy: ^0.1.0+7
-  shelf_web_socket: ^0.2.3
+  shelf: ^1.0.0
+  shelf_proxy: ^1.0.0
+  shelf_web_socket: ^1.0.0
   sse: ^3.7.0
   stream_channel: ^2.0.0
   vm_service: ^6.0.1-nullsafety.0
-  web_socket_channel: ^1.1.0
+  web_socket_channel: ^2.0.0
 
 dev_dependencies:
-  shelf_static: ^0.2.8
+  shelf_static: ^1.0.0
   test: ^1.0.0
-  webdriver: ^2.1.2
+  webdriver: ^3.0.0
