[infra] Limit flutter-analyze to 25 minutes
This builder is currently hanging frequently and using 3 hours to time
out.

TBR=whesse@google.com

Change-Id: Iccef1a520b139347f69ff6135b09037a1ca9dc14
Reviewed-on: https://dart-review.googlesource.com/c/sdk/+/192742
Reviewed-by: Alexander Thomas <athom@google.com>
Commit-Queue: Alexander Thomas <athom@google.com>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -3620,6 +3620,7 @@ buckets {
         properties_j: "clobber:true"
       }
       priority: 50
+      execution_timeout_secs: 1500
       caches {
         name: "browsers"
         path: "browsers"
@@ -10685,6 +10686,7 @@ buckets {
         properties_j: "clobber:true"
       }
       priority: 30
+      execution_timeout_secs: 1500
       caches {
         name: "browsers"
         path: "third_party/browsers"
