[infra] Increase shard timeout on debug nnbd builders
Change-Id: I23c3c21e389a55c5582834c17597d71ad701e525
Reviewed-on: https://dart-review.googlesource.com/c/sdk/+/194064
Reviewed-by: Alexander Thomas <athom@google.com>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -6746,6 +6746,7 @@ buckets {
         properties_j: "$recipe_engine/isolated:{\"server\":\"https://isolateserver.appspot.com\"}"
         properties_j: "$recipe_engine/swarming:{\"server\":\"https://chromium-swarm.appspot.com\"}"
         properties_j: "clobber:true"
+        properties_j: "shard_timeout:5400"
       }
       priority: 70
       caches {
@@ -7094,6 +7095,7 @@ buckets {
         properties_j: "$recipe_engine/isolated:{\"server\":\"https://isolateserver.appspot.com\"}"
         properties_j: "$recipe_engine/swarming:{\"server\":\"https://chromium-swarm.appspot.com\"}"
         properties_j: "clobber:true"
+        properties_j: "shard_timeout:5400"
       }
       priority: 70
       caches {
@@ -7152,6 +7154,7 @@ buckets {
         properties_j: "$recipe_engine/isolated:{\"server\":\"https://isolateserver.appspot.com\"}"
         properties_j: "$recipe_engine/swarming:{\"server\":\"https://chromium-swarm.appspot.com\"}"
         properties_j: "clobber:true"
+        properties_j: "shard_timeout:5400"
       }
       priority: 70
       caches {
@@ -11828,6 +11831,7 @@ buckets {
         properties_j: "$recipe_engine/isolated:{\"server\":\"https://isolateserver.appspot.com\"}"
         properties_j: "$recipe_engine/swarming:{\"server\":\"https://chromium-swarm.appspot.com\"}"
         properties_j: "clobber:true"
+        properties_j: "shard_timeout:5400"
       }
       priority: 30
       caches {
@@ -12002,6 +12006,7 @@ buckets {
         properties_j: "$recipe_engine/isolated:{\"server\":\"https://isolateserver.appspot.com\"}"
         properties_j: "$recipe_engine/swarming:{\"server\":\"https://chromium-swarm.appspot.com\"}"
         properties_j: "clobber:true"
+        properties_j: "shard_timeout:5400"
       }
       priority: 30
       caches {
@@ -12060,6 +12065,7 @@ buckets {
         properties_j: "$recipe_engine/isolated:{\"server\":\"https://isolateserver.appspot.com\"}"
         properties_j: "$recipe_engine/swarming:{\"server\":\"https://chromium-swarm.appspot.com\"}"
         properties_j: "clobber:true"
+        properties_j: "shard_timeout:5400"
       }
       priority: 30
       caches {
