[CFE] add compile-time error when mixin decl on `Function`.

--- a/pkg/front_end/messages.yaml
+++ b/pkg/front_end/messages.yaml
@@ -4974,6 +4974,12 @@ MixinFunction:
   script: |
     class A extends Object with Function {}
 
+MixinOnFunction:
+  template: "Can't create mixin declaration on 'Function'."
+  tip: "Try removing 'Function' from the 'on' clause."
+  script: |
+    mixin A on Function() {}
+
 CannotAssignToFinalVariable:
   template: "Can't assign to the final variable '#name'."
   script: |
