--- a/tools/linux_dist_support/debian/rules
+++ b/tools/linux_dist_support/debian/rules
@@ -57,7 +57,8 @@ override_dh_auto_configure:
 
 override_dh_auto_build:
 	cd dart; \
-	python3 tools/build.py -v -m release -a $(ARCH) $(TOOLCHAIN) create_sdk; \
+	python3 tools/build.py --no-goma --mode release \
+	  --arch $(ARCH) $(TOOLCHAIN) create_sdk; \
 	cd ..
 
 # Building the Dart SDK will already strip all binaries.
