[vm] add compile-time error when ffi @Array got non-positive input.

--- a/pkg/front_end/messages.yaml
+++ b/pkg/front_end/messages.yaml
@@ -4481,6 +4481,11 @@ FfiExceptionalReturnNull:
   template: "Exceptional return value must not be null."
   external: test/ffi_test.dart
 
+FfiArrayGetNonPositiveParams:
+  # Used by dart:ffi
+  template: "Array type only accept a positive number."
+  external: test/ffi_test.dart
+
 SpreadTypeMismatch:
   template: "Unexpected type '#type' of a spread.  Expected 'dynamic' or an Iterable."
   script:
