--- a/pkg/front_end/messages.yaml
+++ b/pkg/front_end/messages.yaml
@@ -4481,9 +4481,9 @@ FfiExceptionalReturnNull:
   template: "Exceptional return value must not be null."
   external: test/ffi_test.dart
 
-FfiArrayGetNonPositiveParams:
+FfiArrayDimensionsNonPositive:
   # Used by dart:ffi
-  template: "Array type only accept a positive number."
+  template: "Array dimensions must be positive numbers."
   external: test/ffi_test.dart
 
 SpreadTypeMismatch:
