--- a/pkg/wasm/analysis_options.yaml
+++ b/pkg/wasm/analysis_options.yaml
@@ -1,4 +1,4 @@
-include: package:pedantic/analysis_options.1.9.0.yaml
+include: package:lints/recommended.yaml
 
 analyzer:
   strong-mode:
@@ -15,6 +15,7 @@ linter:
   - avoid_returning_null_for_void
   - avoid_unused_constructor_parameters
   - await_only_futures
+  - cancel_subscriptions
   - camel_case_types
   - cascade_invocations
   - constant_identifier_names
@@ -44,6 +45,7 @@ linter:
   - prefer_interpolation_to_compose_strings
   - prefer_is_not_operator
   - prefer_null_aware_operators
+  - prefer_single_quotes
   - prefer_relative_imports
   - prefer_typing_uninitialized_variables
   - prefer_void_to_null
@@ -53,6 +55,7 @@ linter:
   - test_types_in_equals
   - throw_in_finally
   - type_annotate_public_apis
+  - unawaited_futures
   - unnecessary_brace_in_string_interps
   - unnecessary_lambdas
   - unnecessary_null_aware_assignments
