pkg:wasm - more cleanup
- Added documentation to many members. Cleaned up existing documentation to
  follow standards.
- Made many more fields final.
- Hide (made private) constructors that a user cannot reasonably invoke.
  - WasmFunction, WasmInstance, WasmExportDescriptor, WasmImportDescriptor
- Added, exported, and use new WasmError class.
- Remove the fluent API in builder
  See https://dart.dev/guides/language/effective-dart/design#avoid-returning-this-from-methods-just-to-enable-a-fluent-interface

Change-Id: I4222f7a95a9b20e89728d71de56b02ec91601e25
Reviewed-on: https://dart-review.googlesource.com/c/sdk/+/202360
Reviewed-by: Liam Appelbe <liama@google.com>
Commit-Queue: Liam Appelbe <liama@google.com>
Auto-Submit: Kevin Moore <kevmoo@google.com>

--- a/pkg/wasm/analysis_options.yaml
+++ b/pkg/wasm/analysis_options.yaml
@@ -13,6 +13,7 @@ linter:
   - avoid_redundant_argument_values
   - avoid_renaming_method_parameters
   - avoid_returning_null_for_void
+  - avoid_returning_this
   - avoid_unused_constructor_parameters
   - await_only_futures
   - cancel_subscriptions
@@ -25,6 +26,7 @@ linter:
   - implementation_imports
   - iterable_contains_unrelated_type
   - join_return_with_assignment
+  - library_private_types_in_public_api
   - lines_longer_than_80_chars
   - list_remove_unrelated_type
   - missing_whitespace_between_adjacent_strings
