--- a/pkg/nnbd_migration/pubspec.yaml
+++ b/pkg/nnbd_migration/pubspec.yaml
@@ -4,7 +4,7 @@ name: nnbd_migration
 publish_to: none
 
 environment:
-  sdk: '>=2.6.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   _fe_analyzer_shared:
@@ -16,7 +16,7 @@ dependencies:
   args: ^1.4.4
   charcode: ^1.1.0
   cli_util: ^0.2.0
-  collection: ^1.14.11
+  collection: ^1.15.0-nullsafety.4
   crypto: ^2.0.6
   meta:
     path: ../meta
