[infra] Move the gcc bot from try-only to a nightly builder.
Change-Id: I6b766360af482b44c1fe42d9b1f85d3ce3108568
Reviewed-on: https://dart-review.googlesource.com/c/sdk/+/206326
Reviewed-by: Alexander Thomas <athom@google.com>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -1249,6 +1249,7 @@ buckets {
         '    "vm-kernel-linux-debug-simarm64c",'
         '    "vm-kernel-precomp-linux-debug-x64c",'
         '    "vm-kernel-precomp-linux-debug-simarm64c",'
+        '    "vm-kernel-gcc-linux",'
         '    "analyzer-nnbd-mac-release",'
         '    "analyzer-nnbd-win-release",'
         '    "vm-precomp-ffi-qemu-linux-release-arm-experimental"'
@@ -8051,6 +8052,146 @@ buckets {
         '  "recipe": "dart/neo"'
         '}'
       priority: 50
+      build_numbers: YES
+      service_account: "dart-luci-try-builder@dart-ci.iam.gserviceaccount.com"
+      experiments {
+        key: "luci.use_realms"
+        value: 100
+      }
+    }
+    builders {
+      name: "vm-kernel-gcc-linux"
+      swarming_host: "chromium-swarm.appspot.com"
+      swarming_tags: "vpython:native-python-wrapper"
+      dimensions: "cpu:x86-64"
+      dimensions: "host_class:default"
+      dimensions: "os:Linux"
+      dimensions: "pool:luci.dart.try"
+      exe {
+        cipd_package: "dart/recipe_bundles/dart.googlesource.com/recipes"
+        cipd_version: "refs/heads/master"
+        cmd: "luciexe"
+      }
+      properties:
+        '{'
+        '  "$dart/build": {'
+        '    "disable_goma": true'
+        '  },'
+        '  "$recipe_engine/isolated": {'
+        '    "server": "https://isolateserver.appspot.com"'
+        '  },'
+        '  "$recipe_engine/swarming": {'
+        '    "server": "https://chromium-swarm.appspot.com"'
+        '  },'
+        '  "clobber": true,'
+        '  "recipe": "dart/neo"'
+        '}'
+      priority: 70
+      build_numbers: YES
+      service_account: "dart-luci-try-builder@dart-ci.iam.gserviceaccount.com"
+      experiments {
+        key: "luci.use_realms"
+        value: 100
+      }
+    }
+    builders {
+      name: "vm-kernel-gcc-linux-beta"
+      swarming_host: "chromium-swarm.appspot.com"
+      swarming_tags: "vpython:native-python-wrapper"
+      dimensions: "cpu:x86-64"
+      dimensions: "host_class:default"
+      dimensions: "os:Linux"
+      dimensions: "pool:luci.dart.try"
+      exe {
+        cipd_package: "dart/recipe_bundles/dart.googlesource.com/recipes"
+        cipd_version: "refs/heads/master"
+        cmd: "luciexe"
+      }
+      properties:
+        '{'
+        '  "$dart/build": {'
+        '    "disable_goma": true'
+        '  },'
+        '  "$recipe_engine/isolated": {'
+        '    "server": "https://isolateserver.appspot.com"'
+        '  },'
+        '  "$recipe_engine/swarming": {'
+        '    "server": "https://chromium-swarm.appspot.com"'
+        '  },'
+        '  "clobber": true,'
+        '  "recipe": "dart/neo"'
+        '}'
+      priority: 70
+      build_numbers: YES
+      service_account: "dart-luci-try-builder@dart-ci.iam.gserviceaccount.com"
+      experiments {
+        key: "luci.use_realms"
+        value: 100
+      }
+    }
+    builders {
+      name: "vm-kernel-gcc-linux-dev"
+      swarming_host: "chromium-swarm.appspot.com"
+      swarming_tags: "vpython:native-python-wrapper"
+      dimensions: "cpu:x86-64"
+      dimensions: "host_class:default"
+      dimensions: "os:Linux"
+      dimensions: "pool:luci.dart.try"
+      exe {
+        cipd_package: "dart/recipe_bundles/dart.googlesource.com/recipes"
+        cipd_version: "refs/heads/master"
+        cmd: "luciexe"
+      }
+      properties:
+        '{'
+        '  "$dart/build": {'
+        '    "disable_goma": true'
+        '  },'
+        '  "$recipe_engine/isolated": {'
+        '    "server": "https://isolateserver.appspot.com"'
+        '  },'
+        '  "$recipe_engine/swarming": {'
+        '    "server": "https://chromium-swarm.appspot.com"'
+        '  },'
+        '  "clobber": true,'
+        '  "recipe": "dart/neo"'
+        '}'
+      priority: 70
+      build_numbers: YES
+      service_account: "dart-luci-try-builder@dart-ci.iam.gserviceaccount.com"
+      experiments {
+        key: "luci.use_realms"
+        value: 100
+      }
+    }
+    builders {
+      name: "vm-kernel-gcc-linux-stable"
+      swarming_host: "chromium-swarm.appspot.com"
+      swarming_tags: "vpython:native-python-wrapper"
+      dimensions: "cpu:x86-64"
+      dimensions: "host_class:default"
+      dimensions: "os:Linux"
+      dimensions: "pool:luci.dart.try"
+      exe {
+        cipd_package: "dart/recipe_bundles/dart.googlesource.com/recipes"
+        cipd_version: "refs/heads/master"
+        cmd: "luciexe"
+      }
+      properties:
+        '{'
+        '  "$dart/build": {'
+        '    "disable_goma": true'
+        '  },'
+        '  "$recipe_engine/isolated": {'
+        '    "server": "https://isolateserver.appspot.com"'
+        '  },'
+        '  "$recipe_engine/swarming": {'
+        '    "server": "https://chromium-swarm.appspot.com"'
+        '  },'
+        '  "clobber": true,'
+        '  "recipe": "dart/neo"'
+        '}'
+      priority: 70
       build_numbers: YES
       service_account: "dart-luci-try-builder@dart-ci.iam.gserviceaccount.com"
       experiments {
