--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -436,6 +436,11 @@ consoles {
     short_name: "f"
   }
   builders {
+    name: "buildbucket/luci.dart.ci.sandbox/vm-kernel-gcc-linux"
+    category: "vm|misc"
+    short_name: "g"
+  }
+  builders {
     name: "buildbucket/luci.dart.ci.sandbox/vm-ffi-android-debug-arm"
     category: "vm|ffi"
     short_name: "d32"
@@ -1310,6 +1315,11 @@ consoles {
     short_name: "f"
   }
   builders {
+    name: "buildbucket/luci.dart.ci.sandbox/vm-kernel-gcc-linux"
+    category: "vm|misc"
+    short_name: "g"
+  }
+  builders {
     name: "buildbucket/luci.dart.ci.sandbox/vm-ffi-android-debug-arm"
     category: "vm|ffi"
     short_name: "d32"
@@ -1557,6 +1567,11 @@ consoles {
     name: "buildbucket/luci.dart.ci.sandbox/vm-kernel-precomp-android-release-arm64-dev"
     category: "vm|kernel-precomp|android"
     short_name: "a64"
+  }
+  builders {
+    name: "buildbucket/luci.dart.ci.sandbox/vm-kernel-gcc-linux-dev"
+    category: "vm|misc"
+    short_name: "g"
   }
   builders {
     name: "buildbucket/luci.dart.ci.sandbox/vm-ffi-android-debug-arm-dev"
@@ -1943,6 +1958,11 @@ consoles {
     short_name: "a64"
   }
   builders {
+    name: "buildbucket/luci.dart.ci.sandbox/vm-kernel-gcc-linux-beta"
+    category: "vm|misc"
+    short_name: "g"
+  }
+  builders {
     name: "buildbucket/luci.dart.ci.sandbox/vm-ffi-android-debug-arm-beta"
     category: "vm|ffi"
     short_name: "d32"
@@ -2325,6 +2345,11 @@ consoles {
     name: "buildbucket/luci.dart.ci.sandbox/vm-kernel-precomp-android-release-arm64-stable"
     category: "vm|kernel-precomp|android"
     short_name: "a64"
+  }
+  builders {
+    name: "buildbucket/luci.dart.ci.sandbox/vm-kernel-gcc-linux-stable"
+    category: "vm|misc"
+    short_name: "g"
   }
   builders {
     name: "buildbucket/luci.dart.ci.sandbox/vm-ffi-android-debug-arm-stable"
@@ -2859,6 +2884,9 @@ consoles {
     name: "buildbucket/luci.dart.try/vm-fuchsia-release-x64-try"
   }
   builders {
+    name: "buildbucket/luci.dart.try/vm-kernel-gcc-linux-try"
+  }
+  builders {
     name: "buildbucket/luci.dart.try/vm-ffi-android-debug-arm-try"
   }
   builders {
@@ -2980,9 +3008,6 @@ consoles {
   }
   builders {
     name: "buildbucket/luci.dart.try/benchmark-linux-try"
-  }
-  builders {
-    name: "buildbucket/luci.dart.try/vm-kernel-gcc-linux-try"
   }
   builders {
     name: "buildbucket/luci.dart.try.shared/presubmit-try"
