--- a/luci-notify.cfg
+++ b/luci-notify.cfg
@@ -1080,6 +1080,18 @@ notifiers {
   }
   builders {
     bucket: "ci.sandbox"
+    name: "vm-kernel-gcc-linux"
+  }
+}
+notifiers {
+  notifications {
+    on_new_failure: true
+    email {
+      recipients: "dart-vm-team-breakages@google.com"
+    }
+  }
+  builders {
+    bucket: "ci.sandbox"
     name: "vm-kernel-linux-debug-ia32"
   }
 }
