--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -2253,6 +2253,50 @@ job {
   }
 }
 job {
+  id: "vm-kernel-gcc-linux"
+  realm: "ci.sandbox"
+  schedule: "triggered"
+  acl_sets: "ci.sandbox"
+  buildbucket {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.dart.ci.sandbox"
+    builder: "vm-kernel-gcc-linux"
+  }
+}
+job {
+  id: "vm-kernel-gcc-linux-beta"
+  realm: "ci.sandbox"
+  schedule: "triggered"
+  acl_sets: "ci.sandbox"
+  buildbucket {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.dart.ci.sandbox"
+    builder: "vm-kernel-gcc-linux-beta"
+  }
+}
+job {
+  id: "vm-kernel-gcc-linux-dev"
+  realm: "ci.sandbox"
+  schedule: "triggered"
+  acl_sets: "ci.sandbox"
+  buildbucket {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.dart.ci.sandbox"
+    builder: "vm-kernel-gcc-linux-dev"
+  }
+}
+job {
+  id: "vm-kernel-gcc-linux-stable"
+  realm: "ci.sandbox"
+  schedule: "triggered"
+  acl_sets: "ci.sandbox"
+  buildbucket {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.dart.ci.sandbox"
+    builder: "vm-kernel-gcc-linux-stable"
+  }
+}
+job {
   id: "vm-kernel-linux-debug-ia32"
   realm: "ci.sandbox"
   schedule: "triggered"
