[infra] Add Windows compressed pointers as nightly builders.
We hit issues on Windows in trial attempts to enable compressed pointers in Flutter. Windows has notably different struct packing rules, different virtual memory allocation APIs, and a different X64 ABI.

Change-Id: I4b0850255ca8c966110731f7c571197d809e5b39
Reviewed-on: https://dart-review.googlesource.com/c/sdk/+/208680
Reviewed-by: William Hesse <whesse@google.com>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -1249,6 +1249,8 @@ buckets {
         '    "vm-kernel-linux-debug-simarm64c",'
         '    "vm-kernel-precomp-linux-debug-x64c",'
         '    "vm-kernel-precomp-linux-debug-simarm64c",'
+        '    "vm-kernel-win-debug-x64c",'
+        '    "vm-kernel-precomp-win-debug-x64c",'
         '    "vm-kernel-gcc-linux",'
         '    "analyzer-nnbd-mac-release",'
         '    "analyzer-nnbd-win-release",'
@@ -12599,6 +12601,43 @@ buckets {
       }
     }
     builders {
+      name: "vm-kernel-precomp-win-debug-x64c"
+      swarming_host: "chromium-swarm.appspot.com"
+      swarming_tags: "vpython:native-python-wrapper"
+      dimensions: "cpu:x86-64"
+      dimensions: "host_class:default"
+      dimensions: "os:Windows"
+      dimensions: "pool:luci.dart.try"
+      exe {
+        cipd_package: "dart/recipe_bundles/dart.googlesource.com/recipes"
+        cipd_version: "refs/heads/master"
+        cmd: "luciexe"
+      }
+      properties:
+        '{'
+        '  "$build/goma": {'
+        '    "enable_ats": false,'
+        '    "server_host": "goma.chromium.org",'
+        '    "use_luci_auth": true'
+        '  },'
+        '  "$recipe_engine/isolated": {'
+        '    "server": "https://isolateserver.appspot.com"'
+        '  },'
+        '  "$recipe_engine/swarming": {'
+        '    "server": "https://chromium-swarm.appspot.com"'
+        '  },'
+        '  "clobber": true,'
+        '  "recipe": "dart/neo"'
+        '}'
+      priority: 70
+      build_numbers: YES
+      service_account: "dart-luci-try-builder@dart-ci.iam.gserviceaccount.com"
+      experiments {
+        key: "luci.use_realms"
+        value: 100
+      }
+    }
+    builders {
       name: "vm-kernel-precomp-win-release-x64"
       swarming_host: "chromium-swarm.appspot.com"
       swarming_tags: "vpython:native-python-wrapper"
@@ -13146,6 +13185,43 @@ buckets {
         '  "recipe": "dart/neo"'
         '}'
       priority: 50
+      build_numbers: YES
+      service_account: "dart-luci-try-builder@dart-ci.iam.gserviceaccount.com"
+      experiments {
+        key: "luci.use_realms"
+        value: 100
+      }
+    }
+    builders {
+      name: "vm-kernel-win-debug-x64c"
+      swarming_host: "chromium-swarm.appspot.com"
+      swarming_tags: "vpython:native-python-wrapper"
+      dimensions: "cpu:x86-64"
+      dimensions: "host_class:default"
+      dimensions: "os:Windows"
+      dimensions: "pool:luci.dart.try"
+      exe {
+        cipd_package: "dart/recipe_bundles/dart.googlesource.com/recipes"
+        cipd_version: "refs/heads/master"
+        cmd: "luciexe"
+      }
+      properties:
+        '{'
+        '  "$build/goma": {'
+        '    "enable_ats": false,'
+        '    "server_host": "goma.chromium.org",'
+        '    "use_luci_auth": true'
+        '  },'
+        '  "$recipe_engine/isolated": {'
+        '    "server": "https://isolateserver.appspot.com"'
+        '  },'
+        '  "$recipe_engine/swarming": {'
+        '    "server": "https://chromium-swarm.appspot.com"'
+        '  },'
+        '  "clobber": true,'
+        '  "recipe": "dart/neo"'
+        '}'
+      priority: 70
       build_numbers: YES
       service_account: "dart-luci-try-builder@dart-ci.iam.gserviceaccount.com"
       experiments {
@@ -17897,6 +17973,43 @@ buckets {
       }
     }
     builders {
+      name: "vm-kernel-precomp-win-debug-x64c-try"
+      swarming_host: "chromium-swarm.appspot.com"
+      swarming_tags: "vpython:native-python-wrapper"
+      dimensions: "cpu:x86-64"
+      dimensions: "host_class:default"
+      dimensions: "os:Windows"
+      dimensions: "pool:luci.dart.try"
+      exe {
+        cipd_package: "dart/recipe_bundles/dart.googlesource.com/recipes"
+        cipd_version: "refs/heads/master"
+        cmd: "luciexe"
+      }
+      properties:
+        '{'
+        '  "$build/goma": {'
+        '    "enable_ats": false,'
+        '    "server_host": "goma.chromium.org",'
+        '    "use_luci_auth": true'
+        '  },'
+        '  "$recipe_engine/isolated": {'
+        '    "server": "https://isolateserver.appspot.com"'
+        '  },'
+        '  "$recipe_engine/swarming": {'
+        '    "server": "https://chromium-swarm.appspot.com"'
+        '  },'
+        '  "clobber": true,'
+        '  "recipe": "dart/neo"'
+        '}'
+      priority: 30
+      build_numbers: YES
+      service_account: "dart-luci-try-builder@dart-ci.iam.gserviceaccount.com"
+      experiments {
+        key: "luci.use_realms"
+        value: 100
+      }
+    }
+    builders {
       name: "vm-kernel-precomp-win-release-x64-try"
       swarming_host: "chromium-swarm.appspot.com"
       swarming_tags: "vpython:native-python-wrapper"
@@ -18194,6 +18307,43 @@ buckets {
     }
     builders {
       name: "vm-kernel-win-debug-x64-try"
+      swarming_host: "chromium-swarm.appspot.com"
+      swarming_tags: "vpython:native-python-wrapper"
+      dimensions: "cpu:x86-64"
+      dimensions: "host_class:default"
+      dimensions: "os:Windows"
+      dimensions: "pool:luci.dart.try"
+      exe {
+        cipd_package: "dart/recipe_bundles/dart.googlesource.com/recipes"
+        cipd_version: "refs/heads/master"
+        cmd: "luciexe"
+      }
+      properties:
+        '{'
+        '  "$build/goma": {'
+        '    "enable_ats": false,'
+        '    "server_host": "goma.chromium.org",'
+        '    "use_luci_auth": true'
+        '  },'
+        '  "$recipe_engine/isolated": {'
+        '    "server": "https://isolateserver.appspot.com"'
+        '  },'
+        '  "$recipe_engine/swarming": {'
+        '    "server": "https://chromium-swarm.appspot.com"'
+        '  },'
+        '  "clobber": true,'
+        '  "recipe": "dart/neo"'
+        '}'
+      priority: 30
+      build_numbers: YES
+      service_account: "dart-luci-try-builder@dart-ci.iam.gserviceaccount.com"
+      experiments {
+        key: "luci.use_realms"
+        value: 100
+      }
+    }
+    builders {
+      name: "vm-kernel-win-debug-x64c-try"
       swarming_host: "chromium-swarm.appspot.com"
       swarming_tags: "vpython:native-python-wrapper"
       dimensions: "cpu:x86-64"
