--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -431,6 +431,16 @@ consoles {
     short_name: "aa"
   }
   builders {
+    name: "buildbucket/luci.dart.ci.sandbox/vm-kernel-win-debug-x64c"
+    category: "vm|misc|compressed"
+    short_name: "jw"
+  }
+  builders {
+    name: "buildbucket/luci.dart.ci.sandbox/vm-kernel-precomp-win-debug-x64c"
+    category: "vm|misc|compressed"
+    short_name: "aw"
+  }
+  builders {
     name: "buildbucket/luci.dart.ci.sandbox/vm-fuchsia-release-x64"
     category: "vm|misc"
     short_name: "f"
@@ -1308,6 +1318,16 @@ consoles {
     name: "buildbucket/luci.dart.ci.sandbox/vm-kernel-precomp-linux-debug-simarm64c"
     category: "vm|misc|compressed"
     short_name: "aa"
+  }
+  builders {
+    name: "buildbucket/luci.dart.ci.sandbox/vm-kernel-win-debug-x64c"
+    category: "vm|misc|compressed"
+    short_name: "jw"
+  }
+  builders {
+    name: "buildbucket/luci.dart.ci.sandbox/vm-kernel-precomp-win-debug-x64c"
+    category: "vm|misc|compressed"
+    short_name: "aw"
   }
   builders {
     name: "buildbucket/luci.dart.ci.sandbox/vm-fuchsia-release-x64"
@@ -2879,6 +2899,12 @@ consoles {
   }
   builders {
     name: "buildbucket/luci.dart.try/vm-kernel-precomp-linux-debug-simarm64c-try"
+  }
+  builders {
+    name: "buildbucket/luci.dart.try/vm-kernel-win-debug-x64c-try"
+  }
+  builders {
+    name: "buildbucket/luci.dart.try/vm-kernel-precomp-win-debug-x64c-try"
   }
   builders {
     name: "buildbucket/luci.dart.try/vm-fuchsia-release-x64-try"
