--- a/luci-notify.cfg
+++ b/luci-notify.cfg
@@ -1806,6 +1806,18 @@ notifiers {
   notifications {
     on_new_failure: true
     email {
+      recipients: "dart-vm-team-breakages@google.com"
+    }
+  }
+  builders {
+    bucket: "ci.sandbox"
+    name: "vm-kernel-precomp-win-debug-x64c"
+  }
+}
+notifiers {
+  notifications {
+    on_new_failure: true
+    email {
       recipients: "athom@google.com"
     }
     notify_blamelist {}
@@ -1914,6 +1926,18 @@ notifiers {
     bucket: "ci.sandbox"
     name: "vm-kernel-win-debug-x64"
     repository: "https://dart.googlesource.com/sdk"
+  }
+}
+notifiers {
+  notifications {
+    on_new_failure: true
+    email {
+      recipients: "dart-vm-team-breakages@google.com"
+    }
+  }
+  builders {
+    bucket: "ci.sandbox"
+    name: "vm-kernel-win-debug-x64c"
   }
 }
 notifiers {
