--- a/commit-queue.cfg
+++ b/commit-queue.cfg
@@ -688,6 +688,10 @@ config_groups {
         includable_only: true
       }
       builders {
+        name: "dart/try/vm-kernel-precomp-win-debug-x64c-try"
+        includable_only: true
+      }
+      builders {
         name: "dart/try/vm-kernel-precomp-win-release-x64-try"
         includable_only: true
       }
@@ -721,6 +725,10 @@ config_groups {
       }
       builders {
         name: "dart/try/vm-kernel-win-debug-x64-try"
+        includable_only: true
+      }
+      builders {
+        name: "dart/try/vm-kernel-win-debug-x64c-try"
         includable_only: true
       }
       builders {
