--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -3573,6 +3573,17 @@ job {
   }
 }
 job {
+  id: "vm-kernel-precomp-win-debug-x64c"
+  realm: "ci.sandbox"
+  schedule: "triggered"
+  acl_sets: "ci.sandbox"
+  buildbucket {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.dart.ci.sandbox"
+    builder: "vm-kernel-precomp-win-debug-x64c"
+  }
+}
+job {
   id: "vm-kernel-precomp-win-release-x64"
   realm: "ci.sandbox"
   schedule: "triggered"
@@ -3735,6 +3746,17 @@ job {
     server: "cr-buildbucket.appspot.com"
     bucket: "luci.dart.ci.sandbox"
     builder: "vm-kernel-win-debug-x64-stable"
+  }
+}
+job {
+  id: "vm-kernel-win-debug-x64c"
+  realm: "ci.sandbox"
+  schedule: "triggered"
+  acl_sets: "ci.sandbox"
+  buildbucket {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.dart.ci.sandbox"
+    builder: "vm-kernel-win-debug-x64c"
   }
 }
 job {
