[infra] Switch Dart SDK configs to main
Bug: b/198416551
Change-Id: I723f5049db52dc7b72bcd6a2bc119aa47cac1f00
Reviewed-on: https://dart-review.googlesource.com/c/sdk/+/212740
Reviewed-by: William Hesse <whesse@google.com>
Commit-Queue: Alexander Thomas <athom@google.com>

--- a/commit-queue.cfg
+++ b/commit-queue.cfg
@@ -63,7 +63,7 @@ config_groups {
     url: "https://dart-review.googlesource.com"
     projects {
       name: "sdk"
-      ref_regexp: "refs/heads/master"
+      ref_regexp: "refs/heads/main"
       ref_regexp: "refs/heads/beta"
       ref_regexp: "refs/heads/dev"
       ref_regexp: "refs/heads/stable"
