--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -8,7 +8,7 @@ consoles {
   id: "be"
   name: "SDK Bleeding Edge Console"
   repo_url: "https://dart.googlesource.com/sdk"
-  refs: "regexp:refs/heads/master"
+  refs: "regexp:refs/heads/main"
   manifest_name: "REVISION"
   builders {
     name: "buildbucket/luci.dart.ci.sandbox/front-end-linux-release-x64"
@@ -717,7 +717,7 @@ consoles {
   id: "alt"
   name: "SDK Bleeding Edge Console (alternative)"
   repo_url: "https://dart.googlesource.com/sdk"
-  refs: "regexp:refs/heads/master"
+  refs: "regexp:refs/heads/main"
   manifest_name: "REVISION"
   builders {
     name: "buildbucket/luci.dart.ci.sandbox/front-end-linux-release-x64"
@@ -2606,7 +2606,7 @@ consoles {
   id: "flutter"
   name: "Dart/Flutter Console"
   repo_url: "https://dart.googlesource.com/sdk"
-  refs: "regexp:refs/heads/master"
+  refs: "regexp:refs/heads/main"
   manifest_name: "REVISION"
   builders {
     name: "buildbucket/luci.dart.ci.sandbox/flutter-analyze"
@@ -2648,7 +2648,7 @@ consoles {
   id: "fyi"
   name: "SDK FYI Console"
   repo_url: "https://dart.googlesource.com/sdk"
-  refs: "regexp:refs/heads/master"
+  refs: "regexp:refs/heads/main"
   manifest_name: "REVISION"
 }
 consoles {
