--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -4085,7 +4085,7 @@ trigger {
   }
 }
 trigger {
-  id: "dart-gitiles-trigger-master"
+  id: "dart-gitiles-trigger-main"
   realm: "ci"
   acl_sets: "ci"
   triggers: "dart-sdk-linux"
@@ -4135,7 +4135,7 @@ trigger {
   triggers: "vm-kernel-win-release-x64"
   gitiles {
     repo: "https://dart.googlesource.com/sdk"
-    refs: "regexp:refs/heads/master"
+    refs: "regexp:refs/heads/main"
   }
 }
 trigger {
@@ -4214,7 +4214,7 @@ trigger {
   }
 }
 trigger {
-  id: "dart-vm-gitiles-trigger-master"
+  id: "dart-vm-gitiles-trigger-main"
   realm: "ci"
   acl_sets: "ci"
   triggers: "app-kernel-linux-debug-x64"
@@ -4253,7 +4253,7 @@ trigger {
   triggers: "vm-precomp-ffi-qemu-linux-release-arm"
   gitiles {
     repo: "https://dart.googlesource.com/sdk"
-    refs: "regexp:refs/heads/master"
+    refs: "regexp:refs/heads/main"
     path_regexps: "DEPS"
     path_regexps: "build/.+"
     path_regexps: "BUILD.gn"
